[project]
name = "3ms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mkdocs-autolinks-plugin>=0.7.1",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.7.6",
    "mkdocs-meta-descriptions-plugin>=4.1.0",
    "mkdocs-print-site-plugin>=2.8",
    "mkdocs-redirects>=1.2.3",
    "mkdocs-static-i18n>=1.3.1",
    "zensical>=0.0.27",
]
